<resources>
    <string name="app_name">小招直聘</string>

    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="copy_success">复制成功</string>
    <string name="deleting">正在删除…</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_faile">删除失败</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="home_company">附近企业</string>
    <string name="home_person">附近求职者</string>
    <string name="home_news">消息</string>
    <string name="home_mine">我的</string>

    <string name="tab_juli">距离排序</string>
    <string name="tab_company">行业筛选</string>
    <string name="tab_type">岗位筛选</string>
    <string name="tab_more">更多筛选</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="error_view_network_error">网络连接异常</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="tip_double_click_exit">再次点击退出</string>
    <string name="hint_username">输入手机号</string>
    <string name="hint_password">输入密码</string>
    <string name="login">登录</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="tip_please_input_username">请输入手机号码</string>
    <string name="tip_login_error_for_network">对不起网络异常,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络连接</string>
    <string name="tip_load_image_faile">图片加载失败</string>
    <string name="tip_save_image_suc">图片已保存(手机相册-> %s)</string>
    <string name="tip_save_image_faile">无法保存图片</string>
    <string name="network_busy">网络繁忙</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>
    <string name="str_request_camera_message">请求获取相机权限</string>



    <string name="mine_jianli">我的简历</string>
    <string name="mine_qiye">我的企业</string>
    <string name="mine_fhuiyuan">会员中心</string>
    <string name="mine_zhiweiguanli">职位管理</string>
    <string name="save">保存</string>
    <string name="mine_info">个人信息</string>
    <string name="info_nicheng">昵称</string>
    <string name="info_name">姓名</string>
    <string name="info_inputnicheng">请输入昵称</string>
    <string name="info_inputname">请输入姓名</string>
    <string name="info_xingbie">性别</string>
    <string name="info_nianling">年龄</string>
    <string name="info_phpne">电话</string>
    <string name="info_inputphone">请输入电话</string>
    <string name="setting_news">消息提醒</string>
    <string name="setting_dingwei">定位</string>
    <string name="setting_huancun">清理缓存</string>
    <string name="setting_yijian">意见反馈</string>
    <string name="setting_gaunyu">关于</string>

    <string name="company_mingchegn">企业信息</string>
    <string name="company_hangye">行业类型</string>
    <string name="company_leixing">企业性质</string>
    <string name="company_guimo">企业规模</string>
    <string name="company_huanjing">企业环境</string>
    <string name="company_dizhi">企业地址</string>
    <string name="company_jianjie">企业简介</string>
    <string name="company_yingyezhizhao">营业执照</string>
    <string name="company_farenshengfen">法人身份证</string>
    <string name="jianli_jibenxinxi">基本信息</string>
    <string name="jianli_qiuzhiyixiang">求职意向</string>
    <string name="jianli_jiaoyubeijing">教育背景</string>
    <string name="jianli_gongzuojingli">工作经历</string>
    <string name="jianli_zhuangyejineng">荣誉/证书</string>
    <string name="jianli_ziwopingjia">自我评价</string>
    <string name="mine_jiaoyubeijing">教育背景</string>
    <string name="mine_gongzuojingli">工作经历</string>
    <string name="mine_zhuanyejineng">专业技能</string>
    <string name="jiaoyushengchengye">教育背景</string>
    <string name="huiyuan">会员中心</string>
    <string name="zhiweiguanli">职位管理</string>
    <string name="fabuzhiwei">发布职位</string>
    <string name="zhiweimiaoshu">职位描述</string>
    <string name="xuanzezhaopian">选择照片</string>
    <string name="qiyexinxi">企业信息</string>

    <!-- IM -->
    <string name="default_group_name">默认分组</string>

    <!--复用 腾讯云im的demo 的属性-->
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="chat_press_talk">按住说话</string>
    <string name="chat_release_send">松开结束</string>
    <string name="chat_release_cancel">松开取消</string>
    <string name="chat_cancel_send">上划取消</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>

    <!-- time -->
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
    <string name="time_more">99+</string>

    <!-- conversation fragment -->
    <string name="login_error">登录失败，请稍后重试</string>
    <string name="conversation_system">系统消息</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="conversation_del">删除会话</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="friend_allow_all">允许任何人添加</string>
    <string name="friend_refuse_all">拒绝任何人添加</string>
    <string name="friend_need_confirm">需验证</string>
    <string name="change_group_error">修改分组失败</string>
    <string name="people">人</string>
    <string name="login_error_timeout">登录失败，当前无网络</string>
    <string name="login_succ">登录成功</string>
    <string name="kick_logout">你的账号已在其他终端登录,重新登录</string>
    <string name="operate_fail">操作失败</string>
    <string name="need_permission">您需要开启权限,并重启应用</string>
    <string name="save_succ">保存成功</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="save_fail">保存失败</string>
    <string name="save_exist">文件已存在</string>
    <string name="tls_expire">账号登录已过期，请重新登录</string>
    <string name="env_normal">当前连接正式环境</string>
    <string name="env_test">当前连接测试环境</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
    <string name="google_service_not_available">google推送服务不可用，请检查google play设置</string>
    <string name="chat_typing">对方正在输入…</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="chat_audio_too_long">录音过长，请重试</string>
    <!-- message -->
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="title_activity_group_chat_setting">GroupChatSettingActivity</string>
    <string name="login_regist">登录/注册</string>
    <string name="setting">设置</string>
    <string name="mine_guanzhu">我的关注</string>
    <string name="mine_fabu">我的发布</string>
    <string name="mine_qiuzhiyixiang">求职意向</string>
    <string name="mine_jibenxinxi">基本信息</string>

    <!-- chat activity -->

    <string name="chat_pullback">撤回</string>
    <string name="chat_pullback_not_support">改会话不支持消息撤回</string>
    <string name="home_conversation_tab">会话</string>
    <string name="home_setting_tab">设置</string>
    <!-- contact fragment -->
    <string name="home_contact_tab">联系人</string>
    <string name="new_friend">新朋友</string>
    <string name="public_group">公开群</string>
    <string name="discuss_group">讨论组</string>
    <string name="chatroom">聊天室</string>
    <string name="addfriend">添加好友</string>
    <string name="contact_add_group">添加群组</string>
    <string name="manangergroup">管理分组</string>
</resources>
