<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/toolbar_background">

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/dp_10"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivHeader"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_40"
            android:src="@mipmap/person_header"
            app:civ_border_color="#FF000000" />

        <TextView
            android:id="@+id/tvLoginRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_10"
            android:padding="@dimen/dp_4"
            android:text="@string/login_regist"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/llFabu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:src="@mipmap/mine_fabu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/mine_fabu"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/llGuangzhu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:src="@mipmap/mine_guangzhu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/mine_guanzhu"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/llJianli"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:src="@mipmap/mine_jianli" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/mine_jianli"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/llqiye"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:src="@mipmap/mine_qiye" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/mine_qiye"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/llZhiweiGuanli"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:src="@mipmap/mine_huiyuan" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/mine_zhiweiguanli"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/llhuiyuan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8"
            android:src="@mipmap/mine_huiyuan" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/mine_fhuiyuan"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />
</LinearLayout>