<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/setting_news"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <com.xiaozhao.view.togglebutton.ToggleButton
            android:id="@+id/tbNews"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/setting_dingwei"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <com.xiaozhao.view.togglebutton.ToggleButton
            android:id="@+id/tbDingwei"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/setting_huancun"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvHuancun"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/space_10"
            android:gravity="center_vertical"
            android:text="23.1M" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/setting_yijian"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/ivHeader"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:text="@string/setting_gaunyu"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/mine_right" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />
</LinearLayout>